# wordle-buddy

./: .gitignore  README.md  features  setup.cfg  setup.py  wordle-buddy.py
core/: json_db.py  wcommands.py  wmessage.py
src/wordle_buddy/: commands.py  connect.py  json_db.py  message.py  run.py  utils.py
test/: test_commands.py  test_json_db.py  test_message.py  test_wcommands.py  test_wmessage.py
