[metadata]
name = wordle-buddy
version = 0.0.3
url = ''
license = ''
author = mikek
author_email = mikefknee@gmail.com
description = Wordle... Buddy...

[options]
packages = find:
package_dir =
    = src
install_requires =
    discord.py
    python-dotenv
    emoji

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    wordle-buddy = wordle_buddy.run:run_buddy

[options.packages.find]
where = src

